Modify index.html for Valentine's Day content
Updated image source and audio file for Valentine's Day.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="front"></div>
                 <div class="letter">
                     <div class="photo-frame">
-                        <img src="images/couple.jpg" alt="Us" class="couple-img">
+                        <img src="couple.jpg" alt="Us" class="couple-img">
                     </div>
                     <div class="message">
                         <p>Happy Valentine's Day!</p>
@@ -28,7 +28,7 @@
     </div>
 
     <audio id="valMusic" loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+        <source src="valentine.mp3" type="audio/mpeg">
     </audio>
 
     <script src="script.js"></script>
