Refactor index.html structure and add heartContainer

--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="bg-hearts">
-        <div class="bg-heart"></div>
-        <div class="bg-heart"></div>
-        <div class="bg-heart"></div>
-        <div class="bg-heart"></div>
-        <div class="bg-heart"></div>
-    </div>
+    <div class="bg-hearts" id="heartContainer"></div>
 
     <div class="container">
         <div class="envelope-wrapper">
