Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
     <div class="bg-hearts" id="heartContainer"></div>
 
     <div class="container">
-        <div class="envelope-wrapper">
-            <div class="envelope">
-                <div class="flap"></div>
-                <div class="front"></div>
-                <div class="letter">
-                    <div class="photo-frame">
-                        <img src="couple.jpg" alt="Us" class="couple-img">
-                    </div>
-                    <div class="message">
-                        <p>Happy Valentine's Day!</p>
-                    </div>
+    <div class="envelope-wrapper">
+        <div class="envelope">
+            <div class="flap"></div>
+            <div class="letter">
+                <div class="photo-frame">
+                    <img src="couple.jpg" alt="Us" class="couple-img">
+                </div>
+                <div class="message">
+                    <p>Happy Valentine's Day!</p>
                 </div>
             </div>
-            <div class="heart" id="heartBtn"></div>
-        </div>
-        <p class="instruction">Tap the heart to open/close</p>
+            <div class="front"></div> </div>
+        <div class="heart" id="heartBtn"></div>
     </div>
+    
+</div>
 
     <audio id="valMusic" loop>
         <source src="valentine.mp3" type="audio/mpeg">
@@ -35,3 +34,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
