Refactor index.html structure and formatting

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <div class="bg-hearts" id="heartContainer"></div>
 
     <div class="container">
-    <div class="envelope-wrapper">
-        <div class="envelope">
+        <div class="envelope-wrapper" id="envelope">
             <div class="flap"></div>
             <div class="letter">
                 <div class="photo-frame">
@@ -21,11 +20,11 @@
                     <p>Happy Valentine's Day!</p>
                 </div>
             </div>
-            <div class="front"></div> </div>
-        <div class="heart" id="heartBtn"></div>
+            <div class="front"></div> 
+            <div class="heart" id="heartBtn"></div>
+        </div>
+        
     </div>
-    
-</div>
 
     <audio id="valMusic" loop>
         <source src="valentine.mp3" type="audio/mpeg">
@@ -34,4 +33,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
