--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
                 <div class="letter">
                     <div class="photo-frame">
                         <video id="valVideo" loop muted playsinline class="couple-video">
-                            <source src="music/mj&lars.mp4" type="video/mp4">
+                            <source src="mj&lars.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="message">
                         <p>Happy Valentine's Day!</p>
-                      
                     </div>
                 </div>
             </div>
             <div class="heart" id="heartBtn"></div>
         </div>
-       
     </div>
 
     <audio id="valMusic" loop>
-        <source src="music/valentine.mp3" type="audio/mpeg">
+        <source src="valentine.mp3" type="audio/mpeg">
     </audio>
 
     <script src="script.js"></script>
